<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MediaServer785</string>
    <string name="hello_world">MediaServer785!</string>
    
    <string name="action_settings">Settings</string>


    <string name="status_prefix">Server status : </string>
    <string name="status_offline">Offline</string>
    <string name="status_online">Online</string>
    
    
    <string name="button_tt_play">Play</string>
    <string name="button_tt_pause">Pause</string>
    <string name="button_tt_previous">Prev</string>
    <string name="button_tt_next">Next</string>
    <string name="button_tt_stop">Stop</string>
    
</resources>
