<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mediaserver785.MediaServerActivity" >

    <TextView
        android:id="@+id/textView_songTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />

    <Button
        android:id="@+id/buttonPlayPause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonPrev"
        android:layout_alignBottom="@+id/buttonPrev"
        android:layout_centerHorizontal="true"
        android:text="@string/button_tt_play"
        android:onClick="playPause" />

    <Button
        android:id="@+id/buttonNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonPlayPause"
        android:layout_alignBottom="@+id/buttonPlayPause"
        android:layout_alignParentRight="true"
        android:text="@string/button_tt_next"
        android:onClick="next" />

    <Button
        android:id="@+id/buttonPrev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView_songTitle"
        android:layout_centerVertical="true"
        android:onClick="prev"
        android:text="@string/button_tt_previous" />

    <Button
        android:id="@+id/buttonStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonPlayPause"
        android:layout_centerHorizontal="true"
        android:onClick="stopSong"
        android:text="@string/button_tt_stop" />
    
</RelativeLayout>
